# bob_nexus

./: .antigravity.yaml  .dockerignore  .env.template  .gitignore  .profile  Dockerfile  MASTERMINDLOG.md  Makefile  README.md  cli.sh  container.sh  docker-compose.yaml  mastermind.sh  nexus_task.md  onboarding.sh  pyproject.toml  rebuild.sh  swarm.sh
.github/workflows/: ci.yml  docker-publish.yml
docker/: Dockerfile.av  Dockerfile.nexus  compose-nexus.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
master/: chat.sh  cli.sh  dashboard.sh  dev.sh  entity_setup.sh  nexus_shell.rc
master/cli/: cli.py  talk.py
master/config/: .env.template  IDENTITY.md  company_rules.md  conf.template.yaml  environment_variables.md  identity.txt  swarm_rules.txt  template_registry.md
master/core/: agent_core.py  chat_backend.py  chat_client.py  dashboard_service.py  dashboard_terminal.py  dashboard_window.py  deployer.py  dispatcher.py  entrypoint.sh  env_helper.py  generate_prompt.py  heartbeat.py  manager.py  skill_tools.py  template_engine.py
master/templates/: blueprint.av.yaml  blueprint.yaml
media/: banner.txt  web.html
requirements/: dev.txt  qdrant.txt  requirements.txt
ros2_ws/src/: .gitkeep
templates/bob_launch/: llm.yaml
templates/bob_llm/: llm.yaml
templates/bob_sdlviz/: agent.yaml  nexus.yaml  nexus_ops.json  repos.yaml  sdlviz.yaml
templates/coder/: agent.yaml  launch.yaml  nexus.yaml  repos.yaml
tests/: Dockerfile.test  docker-compose.test.yaml  integrity_test.py  system_sanity.py
(+168 files in other folders)
